# yacut

./: .flake8  .gitignore  README.md  env.example  pyproject.toml  pytest.ini  requirements.txt  settings.py
migrations/versions/: 2024_04_29_2058-e33b9f0f6d96_initial_migration.py  2024_05_01_1936-1965c208215c_.py
tests/: conftest.py  test_views.py
yacut/: __init__.py  api_views.py  constants.py  error_handlers.py  forms.py  models.py  utils.py  validators.py  views.py
yacut/templates/: base.html  error.html  header.html  short_link.html
